openshift/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: config-tools
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
