openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: config-store
  namespace: config-tools
spec:
  path: /
  to:
    kind: Service
    name: config-store
  port:
    targetPort: 8080-tcp
